Remove bun.lockb and update package-lock.json with new dependencies and type-check script
- Deleted the `bun.lockb` file as it is no longer needed.
- Updated `package-lock.json` to include new dependencies: `ts-node` and `tsx`, enhancing TypeScript support.
- Added a new test script for PDF generation in `package.json` to facilitate testing of the PDF generation functionality.
- Refactored `tsconfig.json` to improve TypeScript configuration, ensuring better compatibility and stricter type checking.
- Made adjustments in various components to handle nullable types for improved data handling and user experience.

--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
     "preview": "vite preview",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "test:pdf": "NODE_OPTIONS='--import tsx' tsx src/utils/pdfGenerator.test.ts"
   },
-
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
     "@radix-ui/react-accordion": "^1.2.0",
@@ -86,6 +86,8 @@
     "lovable-tagger": "^1.1.7",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.11",
+    "ts-node": "^10.9.2",
+    "tsx": "^4.19.3",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
     "vite": "^5.4.1"
